# defi-fullstack-career

./: .env  .env.networks  .gitignore  .railwayignore  Eventliquidatorv7.3.js  PORTFOLIO.md  Procfile  README.md  aaveConfig.js  activate-ethers.mjs  arb-controller-eth-usdc.mjs  arb-detector.mjs  arb-exec-eth-usdc.mjs  arb-sensitivity-eth-usdc.mjs  arb-sim-eth-usdc-bidir.mjs  arb-sim-eth-usdc.mjs  arbEvaluateCycleLoop.js  arbGasAwarePlannerUSDC.js  bot-status-sepolia.mjs  deploy-ethers.mjs  deploy-flasharb-ethers.mjs  deploy-token-ethers.mjs  fork-status.mjs  hardhat.config.cjs  hardhat.config.js  mint-tokens.mjs  multi-scan.mjs  package-lock.json  package.json  package.json.bak  price-scan.mjs  railway.json  swap-back-uniswap.mjs  swap-uniswap.mjs  transfer-token.mjs
config/: aaveLiquidation.config.js  base.config.js  lpFarming.config.js
contracts/: ArbitrageBot.sol  BNBFlashLiquidator.sol  CompoundV3FlashLiquidator.sol  FlashArb.sol  FlashLiquidator.sol  FlashLiquidatorV2.sol  FlashLoanExecutor.sol  MockUSDC.sol  MyToken.sol  README.md
data/: borrowers.json  compound_borrowers.json  liquidators.json
docs/: MASTER_ROADMAP.md  arbitrage-engine.md  flash-loan-executor.md  gas-model.md  system-architecture.md  week3-summary.md  week4-summary.md  (+1 more)
liquidator-rs/: .gitignore  Cargo.toml  README.md
liquidator-rs/scripts/: exportBorrowersForRust.js
liquidator-rs/src/: borrowers.rs  chains.rs  config.rs  discord.rs  executor.rs  health.rs  main.rs  oracle.rs  scanner.rs  swap.rs  types.rs
liquidator-rs/src/protocols/: aave.rs  compound.rs  mod.rs  venus.rs
(+129 files in other folders)
