[package]
name = "liquidator"
version = "0.1.0"
edition = "2021"
description = "High-performance DeFi liquidation bot"
authors = ["Doss <in8forge@proton.me>"]

[dependencies]
# Ethereum - use ethers-rs (stable, battle-tested)
ethers = { version = "2.0", features = ["rustls", "ws"] }

# Async runtime
tokio = { version = "1.40", features = ["full", "sync", "time", "signal"] }
futures = "0.3"

# HTTP & WebSocket
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
dotenv = "0.15"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6.0"
parking_lot = "0.12"
hex = "0.4"

# Time
chrono = "0.4"

# HTTP server for health endpoint
axum = "0.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
